--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@
   grid-row-gap: 8px;
 }
 
-.div1 {
+.sidebar {
   grid-area: 1 / 1 / 4 / 2;
 }
 
-.div2 {
+.header {
   grid-area: 1 / 1 / 2 / 4;
 }
 
-.div3 {
+.main {
   grid-area: 2 / 2 / 4 / 3;
 }
 
-.div4 {
+.footer {
   grid-area: 3 / 3 / 4 / 4;
 }
